--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :status, style: "display: block" %>
-    <%= form.text_field :status %>
+    <%= form.select :status, ['Pending', 'In Progress', 'On Hold', 'Completed'], selected: 'In Progress' %>
   </div>
 
   <div>
